[package]
name = "meet"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
